common zod backend frontend init

--- a/common/package.json
+++ b/common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@amjuz/medium-common",
+  "name": "@amjuz/medium-blog",
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
