Revert "common zod backend frontend init"
This reverts commit c770206c62a5f793d1f9796c7b43c80f397329a9.

--- a/common/package.json
+++ b/common/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@amjuz/medium-blog",
+  "name": "@amjuz/medium-common",
   "version": "1.0.0",
   "main": "dist/index.js",
   "scripts": {
