--- a/common/package.json
+++ b/common/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@amjuz/medium-common",
-  "version": "1.0.0",
+  "name": "@amjuz/medium-blog",
+  "version": "1.0.2",
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
