--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@amjuz/medium-blog": "^1.0.2",
     "@types/axios": "^0.14.0",
     "axios": "^1.6.8",
+    "lucide": "^0.378.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
