--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,8 +15,10 @@
     "axios": "^1.6.8",
     "lucide": "^0.378.0",
     "lucide-react": "^0.379.0",
+    "moment-timezone": "^0.5.45",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
